On branch features/contact-form-flow  Changes to be committed: 	modified:   src/css/contact-form.css 	modified:   src/index.js 	new file:   src/js/contact-form/cf7-form-connect.js 	renamed:    src/js/contact-form.js -> src/js/contact-form/cf7-tours.js 	new file:   src/js/contact-form/index.js

--- a/src/css/contact-form.css
+++ b/src/css/contact-form.css
@@ -205,6 +205,7 @@
         padding: 15px !important;
         height: 45px !important;
         border-radius: 50% !important;
+        line-height: 0px !important;
       }
 
       #presupuesto_persona, #cantidad-dias {
