On branch feature/footer-styles
 Changes to be committed:
	new file:   src/css/footer.css
	new file:   src/css/home.css
	modified:   src/css/styles.css
	new file:   src/images/footer_background.jpg

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -3,4 +3,5 @@
  */
 
 /* stylelint-disable-next-line function-url-quotes */
-@import url('./contact-form.css');
+@import url("./contact-form.css");
+@import url("./footer.css");
