--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -5,3 +5,4 @@
 /* stylelint-disable-next-line function-url-quotes */
 @import url("./contact-form.css");
 @import url("./footer.css");
+@import url("./home.css");
