--- a/src/css/home.css
+++ b/src/css/home.css
@@ -10,26 +10,40 @@ body:is(.home) {
       flex-direction: column;
 
       .dt-swiper-content {
-        height: auto;
+        height: 100%;
         display: flex;
         flex-direction: column;
         justify-content: center;
       }
     }
 
+    .dt-swiper-content-image a img {
+      width: 100%;
+      object-fit: cover;
+      height: 500px;
+    }
+
     .swiper-slide {
+      height: 100%;
+      flex-wrap: nowrap;
+
       .dt-swiper-content-btn {
         width: 80%;
         padding: 15px;
         text-align: center;
-        margin: auto;
+        margin: 0 auto;
         margin-bottom: 16px;
       }
 
       .dt-swiper-content-title {
         max-width: 80%;
-        margin: auto;
+        margin: 16px auto;
         text-align: center;
+        line-height: 1;
+
+        a {
+          font-size: clamp(1.5rem, 1vw, 2rem);
+        }
       }
     }
   }
